# $Id: CHANGELOG,v 1.6 2003/09/26 09:19:47 jaco Exp $

* Fri, Sep 26, 2003, 0.5.5-cvs
  Jaco Greeff <jaco@linuxminicd.org>:
    [FAQ]:
      - Updated FAQ to include some compression parameter
        statistics (describes mklivecd --blocksize and --looptype)
    [README]:
      - Include CVS location
    [mklivecd]:
      - Changed default blocksize back to 64K (sane default for
        fastest operation in decompressing the compressed image)
      - Added '--blocksize' option to, accepting sizes in K, eg.
        '--blocksize 224' to use a 224K size for the compressed
        blocks.


* Thu, Sep 25, 2003, 0.5.5
  Jaco Greeff <jaco@linuxminicd.org>:
    [README]:
      - Add mailing list information
    [hwdetect]:
      - Moved hwdetect initscript out of /etc/init.d into
        /usr/share/mklivecd/init.d
      - Allow hwdetect to be executed from either /usr/sbin (if
        installed) or from the always available /initrd/usr/sbin
        in initscript
    [linuxrc]:
      - Only cater for devfs, manually created device should be
        done in mklivecd, not "on-the-fly"
      - Chmod /tmp to 777, allowing all users write access to it
      - Added support for bzloop images (experimental) (Also see
        the mklivecd changelog entry on this)
    [mklivecd]:
      - Added support for bzloop images (experimental), specified
        with --looptype=<cloop|bzloop> option. This
        (--looptype=bzloop) requires an updated cloop-utils
        providing both the bzloop module and {create,extract}_bzfs
        executables (http://www.linuxminicd.org/bzloop/)
      - Changed input blocksize to compression from 64K to 224K.
        This still allows for overflow blocks (block with no
        compression) to be smaller than the maximum size of 256K,
        whilst allowing for a smaller final iso size (It can be
        made larger, but 224K is safe and should work for all
        types of blocks)
      - Test for both the mkisofs and create_{compressed_,bz}fs