@@ -1,4 +1,4 @@
-# $Id: mklivecd.spec.in,v 1.2 2003/09/25 08:42:54 jaco Exp $
+# $Id: mklivecd.spec.in,v 1.3 2003/09/28 19:03:11 jaco Exp $
 
 %define name		mklivecd
 %define version		@MKLIVECDVER
@@ -44,6 +44,9 @@ rm -rf %buildroot
 %{_datadir}/mklivecd/init.d/hwdetect
 
 %changelog
+* Sat Sep 27 2003 Tibor Pittich <Tibor.Pittich@phuture.sk> 0.5.5-2mdk
+- rebuild
+
 * Thu Sep 25 2003 Jaco Greeff <jaco@linuxminicd.org> 0.5.5-1mdk
 - version 0.5.5
 
